feat: implement Level 4 observability, CQRS read projection, and resilience